--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+    <provider
+     android:name="SongProvider"
+     android:authorities="com.bickovskis.songreader.songprovider" />
+        
+        
     </application>
 
 </manifest>
